MIDI filestreams + PortMIDI = MIDI player :)
--HG--
extra : source : bad06bd5a1725841f0c4f00987ee2c9896ff5e5b

--- a/pm/Makefile
+++ b/pm/Makefile
@@ -3,20 +3,23 @@ CFLAGS=-O2 -g $(ECFLAGS)
 ECFLAGS=
 LD=$(CC)
 LDFLAGS=$(ELDFLAGS)
-LIBS=-lportmidi
+LIBS=-lportmidi -lporttime
 ELDFLAGS=
 
-all: dumpfile
+all: dumpfile playfile
 
 pmf/libportmidifile.a:
 	cd pmf ; $(MAKE)
 
 dumpfile: dumpfile.o pmf/libportmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< pmf/libportmidifile.a $(LIBS) -o dumpfile
+	$(LD) $(CFLAGS) $(LDFLAGS) $< pmf/libportmidifile.a $(LIBS) -o $@
+
+playfile: playfile.o pmf/libportmidifile.a
+	$(LD) $(CFLAGS) $(LDFLAGS) $< pmf/libportmidifile.a $(LIBS) -o $@
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f *.o dumpfile
+	rm -f *.o dumpfile playfile
 	cd pmf ; $(MAKE) clean
