Rename portmidistream to portmidifstream to make it clear that these are /file/ streams.
--HG--
extra : source : facc8ef37bdfdea7562c7062422cde364df0c67e

--- a/pm/pmf/Makefile
+++ b/pm/pmf/Makefile
@@ -5,7 +5,7 @@ AR=ar
 ARFLAGS=rc
 RANLIB=ranlib
 
-PORTMIDIFILE_OS=portmidifile.o portmidifilealloc.o portmidistream.o
+PORTMIDIFILE_OS=portmidifile.o portmidifilealloc.o portmidifstream.o
 
 all: libportmidifile.a
 
