Beginnings of a "retempoer"
--HG--
extra : source : 15798b859369e7aa31445e672057613ed7cb4dcb

--- a/pm/Makefile
+++ b/pm/Makefile
@@ -3,10 +3,10 @@ CFLAGS=-O2 -g $(ECFLAGS)
 ECFLAGS=
 LD=$(CC)
 LDFLAGS=$(ELDFLAGS)
-LIBS=-lportmidi -lporttime
+LIBS=-lportmidi -lporttime -lm
 ELDFLAGS=
 
-all: dumpfile playfile
+all: dumpfile playfile retempofile
 
 pmf/libportmidifile.a:
 	cd pmf ; $(MAKE)
@@ -15,6 +15,9 @@ dumpfile: dumpfile.o pmf/libportmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< pmf/libportmidifile.a $(LIBS) -o $@
 
 playfile: playfile.o pmf/libportmidifile.a
+	$(LD) $(CFLAGS) $(LDFLAGS) $< pmf/libportmidifile.a $(LIBS) -o $@
+
+retempofile: retempofile.o pmf/libportmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< pmf/libportmidifile.a $(LIBS) -o $@
 
 %.o: %.c
