Added a device-dumper.
--HG--
extra : source : 74e32db747d3258d07c0d363620f5c36abc46c6f

--- a/pm/Makefile
+++ b/pm/Makefile
@@ -6,13 +6,16 @@ LDFLAGS=$(ELDFLAGS)
 LIBS=-lportmidi -lporttime -lm
 ELDFLAGS=
 
-all: dumpfile retempofile
+all: dumpfile dumpdev retempofile
 
 midifile/libmidifile.a:
 	cd midifile ; $(MAKE)
 
 dumpfile: dumpfile.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
+
+dumpdev: dumpdev.o
+	$(LD) $(CFLAGS) $(LDFLAGS) $< $(LIBS) -o $@
 
 retempofile: retempofile.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
@@ -21,5 +24,5 @@ retempofile: retempofile.o midifile/libmidifile.a
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f *.o dumpfile retempofile
+	rm -f *.o dumpfile dumpdev retempofile
 	cd midifile ; $(MAKE) clean
