--- a/pm/Makefile
+++ b/pm/Makefile
@@ -6,7 +6,7 @@ LDFLAGS=$(ELDFLAGS)
 LIBS=-lportmidi -lporttime -lm
 ELDFLAGS=
 
-all: dumpfile dumpdev retempofile mergefiles
+all: dumpfile dumpdev retempofile tempotapper mergefiles
 
 midifile/libmidifile.a:
 	cd midifile ; $(MAKE)
@@ -20,6 +20,9 @@ dumpdev: dumpdev.o
 retempofile: retempofile.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
 
+tempotapper: tempotapper.o midifile/libmidifile.a
+	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
+
 mergefiles: mergefiles.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
 
@@ -27,5 +30,5 @@ mergefiles: mergefiles.o midifile/libmidifile.a
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f *.o dumpfile dumpdev retempofile mergefiles
+	rm -f *.o dumpfile dumpdev retempofile tempotapper mergefiles
 	cd midifile ; $(MAKE) clean
