--- a/pm/Makefile
+++ b/pm/Makefile
@@ -6,7 +6,7 @@ LDFLAGS=$(ELDFLAGS)
 LIBS=-lportmidi -lporttime -lm
 ELDFLAGS=
 
-all: dumpfile dumpdev retempofile tempotapper mergefiles
+all: dumpfile dumpdev retempofile tempotapper temposmoother mergefiles
 
 midifile/libmidifile.a:
 	cd midifile ; $(MAKE)
@@ -23,6 +23,9 @@ retempofile: retempofile.o midifile/libmidifile.a
 tempotapper: tempotapper.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
 
+temposmoother: temposmoother.o midifile/libmidifile.a
+	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
+
 mergefiles: mergefiles.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
 
@@ -30,5 +33,5 @@ mergefiles: mergefiles.o midifile/libmidifile.a
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f *.o dumpfile dumpdev retempofile tempotapper mergefiles
+	rm -f *.o dumpfile dumpdev retempofile tempotapper temposmoother mergefiles
 	cd midifile ; $(MAKE) clean
