Adding the chgvel program for my too-soft digital keyboard.
--HG--
extra : source : 1657030e0a1bd145b61305cb1ae7915bb8902cff

--- a/pm/Makefile
+++ b/pm/Makefile
@@ -6,7 +6,7 @@ LDFLAGS=$(ELDFLAGS)
 LIBS=-lportmidi -lporttime -lm
 ELDFLAGS=
 
-TARGETS=dumpfile dumpdev retempofile tempotapper notetapper temposmoother mergefiles
+TARGETS=dumpfile dumpdev chgvel retempofile tempotapper notetapper temposmoother mergefiles
 
 all: $(TARGETS)
 
@@ -18,6 +18,9 @@ dumpfile: dumpfile.o midifile/libmidifile.a
 
 dumpdev: dumpdev.o
 	$(LD) $(CFLAGS) $(LDFLAGS) $< $(LIBS) -o $@
+
+chgvel: chgvel.o midifile/libmidifile.a
+	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
 
 retempofile: retempofile.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
