--- a/Makefile.humidity
+++ b/Makefile.humidity
@@ -8,7 +8,8 @@ LIBS=-lportmidi -lporttime -lm
 SDL_LIBS=-lSDL
 ELDFLAGS=
 
-TARGETS=dumpfile dumpdev chgvel timesigfixer retempofile temposmoother mergefiles humidity play.so
+TARGETS=dumpfile dumpdev chgvel timesigfixer retempofile temposmoother \
+    mergefiles humidity play.so mousebow.so
 
 all: $(TARGETS)
 
