--- a/Makefile.humidity
+++ b/Makefile.humidity
@@ -16,29 +16,17 @@ all: $(TARGETS)
 midifile/libmidifile.a:
 	cd midifile ; $(MAKE)
 
+# Cancel GNU make's builtin rule
+%: %.c
+
+%: %.o midifile/libmidifile.a
+	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
+
 humidity: humidity.o whereami.o midifile/libmidifile.a
 	$(LD) $(CFLAGS) $(LDFLAGS) $< whereami.o midifile/libmidifile.a $(LIBS) -o $@
 
-dumpfile: dumpfile.o midifile/libmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
-
 dumpdev: dumpdev.o
 	$(LD) $(CFLAGS) $(LDFLAGS) $< $(LIBS) -o $@
-
-chgvel: chgvel.o midifile/libmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
-
-timesigfixer: timesigfixer.o midifile/libmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
-
-retempofile: retempofile.o midifile/libmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
-
-temposmoother: temposmoother.o midifile/libmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
-
-mergefiles: mergefiles.o midifile/libmidifile.a
-	$(LD) $(CFLAGS) $(LDFLAGS) $< midifile/libmidifile.a $(LIBS) -o $@
 
 %.so: %-sdl.o
 	$(LD) $(CFLAGS) $(LDFLAGS) $(SHFLAGS) $< $(LIBS) $(SDL_LIBS) -o $@
@@ -51,5 +39,4 @@ mergefiles: mergefiles.o midifile/libmidifile.a
 
 clean:
 	rm -f *.o $(TARGETS)
-	rm -f mousebow
 	cd midifile ; $(MAKE) clean
